--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -38,7 +38,7 @@
       {% if post.paperurl %}
         <a href="{{ post.paperurl }}" target="_blank">{{ title }}</a>
       {% else %}
-        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+        <a href="{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
     
