--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: default
 ---
 
@@ -75,4 +75,4 @@ layout: default
       </div>
     </div>
   {% endif %}
-</div>
+</div> -->
