--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,8 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+<!-- <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css"> -->
+<link rel="stylesheet" href="{{ base_path | replace: 'http:', 'https:' }}/assets/css/main.css">
+
 
 <meta http-equiv="cleartype" content="on">
